--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,14 @@ dependencies:
   font_awesome: ^5.10.1
   font_awesome_flutter: ^10.1.0
   dio: ^4.0.6
-  flutter_screenutil: ^5.5.0
+  shared_preferences: ^2.0.15
+  reorderable_grid_view: ^2.2.2
+  device_info_plus: ^3.2.3
+  device_info_plus_web: ^2.1.0
+  flutter_background_service: ^2.1.1
+  flutter_background_service_android: ^2.0.1
+  provider: ^6.0.3
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +71,14 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/
-  #   - images/a_dot_ham.jpeg
+  fonts:
+     - family: TiroGurmukhi
+       fonts:
+         - asset: fonts/TiroGurmukhi-Italic.ttf
+         - asset: fonts/TiroGurmukhi-Regular.ttf
+     - family: RobotoSlab
+       fonts:
+         - asset: fonts/RobotoSlab-VariableFont_wght.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
